syntax = "proto3";

option csharp_namespace = "Shared.Grpc";

package catalog;

service CatalogService {
  rpc CheckBookQuantity (CheckBookQuantityRequest) returns (CheckBookQuantityResponse);
}

message CheckBookQuantityRequest {
  int32 book_id = 1;
  int32 quantity = 2;
}

message CheckBookQuantityResponse {
  bool is_available = 1;
}